# ganglia-monitoring

./: CMakeLists.txt  LICENSE.txt  README.md  modroxie.py  modroxie.pyconf  postinst  postinst.in  postrm  postrm.in
cmake_modules/: .gmCommonSetup.cmake.swo  FindLIBXML2.cmake  gmCommonSetup.cmake  optionDefaults.cmake
cmake_modules/dependencies/: el6.cmake  precise.cmake  utopic.cmake
esp/: CMakeLists.txt
esp/files/: CMakeLists.txt  ganglia.json
esp/scm/: CMakeLists.txt  additional.cmake  ws_rrd.ecm
esp/services/ws_rrd/: CMakeLists.txt  DefaultRRDSettings.hpp  RRDFileHelper.cpp  RRDFileHelper.hpp  RRDGraphWrapper.cpp  RRDGraphWrapper.hpp  WsRRDPlugin.cpp  WsRRDService.cpp  WsRRDService.hpp  common-wsrrd.hpp.cmake
esp/src/: CMakeLists.txt
esp/src/eclwatch/: .CMakeLists.txt.swp  CMakeLists.txt  GangliaSelectWidget.js  GangliaWidget.js  HPCCPlatformOpsWidget.js
esp/src/eclwatch/css/: CMakeLists.txt  hpcc.css
esp/src/eclwatch/img/: CMakeLists.txt
esp/src/eclwatch/nls/: CMakeLists.txt  hpcc.js
esp/src/eclwatch/templates/: CMakeLists.txt  GangliaWidget.html  HPCCPlatformOpsWidget.html
esp/src/ganglia/: .CMakeLists.txt.swp  CMakeLists.txt  GangliaFilterDropDownWidget.js  GangliaWidget.js  WsRrd.js  ganglia.json  ws_rrd.js
esp/src/ganglia/css/: CMakeLists.txt  ganglia.css
esp/src/ganglia/img/: CMakeLists.txt
esp/src/ganglia/nls/: .0000015F.swp  CMakeLists.txt  ganglia.js
esp/src/ganglia/nls/bs/: ganglia.js
esp/src/ganglia/nls/es/: ganglia.js
esp/src/ganglia/nls/zh/: ganglia.js
esp/src/ganglia/templates/: CMakeLists.txt  GangliaWidget.html
frontend/: modroxie.pyconf
initfiles/: CMakeLists.txt
initfiles/componentfiles/: CMakeLists.txt
initfiles/componentfiles/configxml/: CMakeLists.txt  cgencomplist.xml  esp_service_ws_rrd.xsl
scripts/: getMetrics.sh.in
vm_precise/: cluster_view.php  cluster_view.tpl  conf.php  get_context.php  gmond-start.conf  gmond.conf  header.tpl  host_view.tpl  install_graphs  install_graphs.sh  install_graphs_helper.sh  modpython.conf  query_count_report.php  query_count_s_report.php  roxie_instances_report.php
